# casana

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.evolution.yml  langgraph.json  main.py  pyproject.toml  render.yaml
data/: Departamentos_y_municipios_codigos_20260523.csv  normalized_zones.json
data/barranquilla/: barranquilla_barrios.geojson  barranquilla_localidades.geojson
data/cartagena/: datos-maestros-listado-de-barrios-del-distrito-de-cartagena.xlsx
data/medellin/: medellin_comunas.geojson
diagrams/: estatia-flow.mmd  news-composite-flow.mmd
scripts/: _crawl4ai_extract.py  benchmark_search.py  normalize_geodata.py
src/: main.py
src/agents/: __init__.py  evaluator_agent.py  news_agent.py  properties_agent.py  requirements_agent.py  responder_agent.py  softener_agent.py  synthesizer_agent.py  whatsapp_agent.py
src/api/: deps.py  main.py  routes.py  schemas.py  streaming.py
src/estatia/: app.py  config.py  graph.py  models.py  services.py
src/frontend/: index.html  package-lock.json  vite.config.ts
src/graph/: graph.py
src/state/: listings.py  news.py  requirements.py  state.py
src/tools/: __init__.py  scraper.py
src/utils/: __init__.py  geography.py
tests/: __init__.py  test_evaluator_agent.py  test_geography.py  test_graph.py  test_news_agent.py  test_normalized_geodata.py  test_properties_node.py  test_properties_node_concurrency.py  test_requirements_agent.py  test_responder_agent.py  test_services.py  test_softener_agent.py  test_synthesizer_agent.py  test_whatsapp_agent.py
(+37 files in other folders)
