[project]
name = "estatia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.14.4",
    "fastapi>=0.115.0",
    "langchain-community>=0.4.1",
    "langchain-core>=0.3",
    "langchain-openai>=1.2.1",
    "langgraph>=1.1.10",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langgraph-cli[inmem]>=0.4.25",
    "playwright>=1.59.0",
    "psycopg[binary]>=3.2.0",
    "pydantic>=2.7",
    "pytest>=9.0.3",
    "python-dotenv>=1.0",
    "requests>=2.32",
    "scrapling[ai,all]>=0.4.8",
    "searxng>=0.0.0.dev0",
    "tavily-python>=0.7.24",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
]
